refactor(order): refactor create order